fix alignment

--- a/Resources/assets/styles/style.scss
+++ b/Resources/assets/styles/style.scss
@@ -172,7 +172,7 @@ table {
         td, th {
             vertical-align: middle !important;
 
-            &.text, &.translatable {
+            &.text, &.translatable, &.email, &.phone {
                 text-align: left;
             }
             &.number, &.money, &.date, &.datetime {
